[package]
name = "microasync"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }
rtt-target = { version = "0.6.1" }
panic-rtt-target = { version = "0.2.0" }
embedded-hal = { version = "1.0.0" }
microbit-v2 = { version = "0.15.1" }
fugit = { version = "0.3.7" }
critical-section = { version = "1.2.0" }
heapless = { version = "0.8.0" }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }

[features]
trigger-overflow = []
